@@ -42,7 +42,7 @@ databaseVersion :: String -> String
 -- THINGS I WANT TO DO ON THE NEXT CHANGE
 -- * Change filepaths to store a 1 byte prefix saying 8bit ASCII or UTF8
 -- * Duration and Time should be stored as number of 1/10000th seconds Int32
-databaseVersion x = "SHAKE-DATABASE-10-" ++ s ++ "\r\n"
+databaseVersion x = "SHAKE-DATABASE-11-" ++ s ++ "\r\n"
     where s = tail $ init $ show x -- call show, then take off the leading/trailing quotes
                                    -- ensures we do not get \r or \n in the user portion
 
