@@ -1,5 +1,7 @@
 Changelog for Shake
 
+    IMPORTANT: Incompatible on disk format change
+    #209, improve orderOnly dependencies
 0.14.3
     Support for the filepath shipped with GHC 7.10
     Add Timeout option to command
